# fauxrest

./: .gitignore  404.html  Cargo.toml  Containerfile  GUIDELINES_JA.md  Justfile  README.md  index.html  index.xml  prest.json  sitemap.xml
.github/assets/: cli_spec.md  spec.md
.github/disabled_workflows/: debug_pushing_container.yaml
.github/docs_for_ai/: GEMINI.md
.github/scripts/: update_version.sh
.github/workflows/: build.yaml  copilot-setup-steps.yml  debug_pushing_container.yaml  publish.yaml  update-version.yaml
about/: index.html
categories/: index.html  index.xml
cli/: index.html
config/: index.html
contribute/: index.html
developers/: index.html
docs/: .gitignore  config.toml  go.mod
docs/content/: _index.md  about.md  cli.md  config.md  contribute.md  developers.md  examples.md  features.md  install.md  users.md
docs/contents/: contributing.md  developer-experience.md
docs_legacy/contents/: introduction.md  routing-and-data.md
examples/: index.html
features/: index.html
install/: index.html
spec/: conventions.md  rules_development.md  specifications.md  user_guide.md
spec/ja/: conventions.md  rules_development.md  specifications.md  user_guide.md
src/: config.rs  context.rs  filter.rs  lib.rs  main.rs  orchestrator.rs  serializers.rs
src/cmd/: args.rs  main.rs  mod.rs
tags/: index.html  index.xml
testdata/: users.json
testdata/example1/: profile.json
testdata/tamada/: _config.json  activities.json  degrees.json  job-histories.json  (+2 more)
tests/: test_fauxrest.rs  test_generator.rs  test_prest.rs
users/: index.html
(+10 files in other folders)
