[package]
name = "fauxrest"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "fauxrest"
path = "src/cmd/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
rusqlite = { version = "0.40", features = ["bundled"] }
tempfile = "3"
thiserror = "2.0"
regex = "1"

[dev-dependencies]
